--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,31 +20,41 @@
 
     <Button
         android:id="@+id/notes_tab_btn"
-        android:layout_width="124sp"
+        android:layout_width="120sp"
         android:layout_height="50sp"
-        android:layout_marginStart="10sp"
-        android:layout_marginTop="600sp"
+        android:layout_marginStart="12sp"
+        android:layout_marginBottom="10sp"
+        android:layout_alignParentBottom="true"
+
         android:backgroundTint="@color/buttonColor"
-        android:text="@string/notes_title"
-        android:textColor="@color/textColor" />
+        android:textSize="15sp"
+        android:textColor="@color/textColor"
+        android:text="@string/notes_title" />
 
     <Button
         android:id="@+id/tasks_tab_btn"
-        android:layout_width="124sp"
+        android:layout_width="120sp"
         android:layout_height="50sp"
-        android:layout_marginTop="600sp"
-        android:layout_marginStart="144sp"
+        android:layout_marginBottom="10sp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+
         android:backgroundTint="@color/buttonColor"
+        android:textSize="15sp"
         android:textColor="@color/textColor"
         android:text="@string/tasks_title" />
 
     <Button
         android:id="@+id/timer_tab_btn"
-        android:layout_width="124sp"
+        android:layout_width="120sp"
         android:layout_height="50sp"
-        android:layout_marginTop="600sp"
-        android:layout_marginStart="278sp"
+        android:layout_marginBottom="10sp"
+        android:layout_marginEnd="12sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+
         android:backgroundTint="@color/buttonColor"
+        android:textSize="15sp"
         android:textColor="@color/textColor"
         android:text="@string/timer_title" />
 </RelativeLayout>
