--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,50 +11,51 @@
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50sp"
+        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="50dp"
         android:fontFamily="@font/adamina"
         android:text="@string/logo"
         android:textAlignment="center"
         android:textColor="@color/textColor"
-        android:textSize="30sp" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/notes_tab_btn"
-        android:layout_width="120sp"
-        android:layout_height="50sp"
-        android:layout_marginStart="12sp"
-        android:layout_marginBottom="10sp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
 
         android:backgroundTint="@color/buttonColor"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:textColor="@color/textColor"
         android:text="@string/notes_title" />
 
     <Button
         android:id="@+id/tasks_tab_btn"
-        android:layout_width="120sp"
-        android:layout_height="50sp"
-        android:layout_marginBottom="10sp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
 
         android:backgroundTint="@color/buttonColor"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:textColor="@color/textColor"
         android:text="@string/tasks_title" />
 
     <Button
         android:id="@+id/timer_tab_btn"
-        android:layout_width="120sp"
-        android:layout_height="50sp"
-        android:layout_marginBottom="10sp"
-        android:layout_marginEnd="12sp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="12dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
 
         android:backgroundTint="@color/buttonColor"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:textColor="@color/textColor"
         android:text="@string/timer_title" />
 </RelativeLayout>
