--- a/app/src/main/res/layout/notes.xml
+++ b/app/src/main/res/layout/notes.xml
@@ -55,4 +55,17 @@
         android:textSize="15dp"
         android:textColor="@color/textColor"
         android:text="@string/timer_title" />
+
+    <EditText
+        android:id="@+id/editTextTextMultiLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/textView"
+        android:layout_marginTop="100dp"
+        android:layout_marginHorizontal="10dp"
+        android:hint="@string/notes_hint"
+        android:gravity="start|top"
+        android:textSize="20dp"
+        android:textColor="@color/textColor"
+        android:inputType="textMultiLine" />
 </RelativeLayout>
