--- a/app/src/main/res/layout/timer.xml
+++ b/app/src/main/res/layout/timer.xml
@@ -14,45 +14,11 @@
         android:layout_marginTop="50dp"
         android:layout_marginHorizontal="50dp"
         android:textAlignment="center"
-        android:textSize="30dp"/>
+        android:textSize="@dimen/title_text_size"/>
 
-    <Button
-        android:id="@+id/notes_tab_btn"
-        android:layout_width="120dp"
+    <include
+        layout="@layout/bottom_nav"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentBottom="true"
-
-        android:backgroundTint="@color/buttonColor"
-        android:textSize="15dp"
-        android:textColor="@color/textColor"
-        android:text="@string/notes_title" />
-
-    <Button
-        android:id="@+id/tasks_tab_btn"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-
-        android:backgroundTint="@color/buttonColor"
-        android:textSize="15dp"
-        android:textColor="@color/textColor"
-        android:text="@string/tasks_title" />
-
-    <Button
-        android:id="@+id/timer_tab_btn"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="12dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-
-        android:backgroundTint="@color/buttonColor"
-        android:textSize="15dp"
-        android:textColor="@color/textColor"
-        android:text="@string/timer_title" />
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
